[package]
name = "qtlib"
version = "0.1.0"
authors = ["zecwallet"]
edition = "2018"

[lib]
name = "silentdragonlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
blake3 = "0.3.4"
silentdragonlitelib = { git = "https://github.com/MyHush/silentdragonlite-cli", rev = "7c65e566c44268954654d9ff3e1c26b1e1d16167" }
