[package]
name = "qtlib"
version = "0.1.0"
authors = ["zecwallet"]
edition = "2018"

[lib]
name = "silentdragonlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
blake3 = "0.3.4"
silentdragonlitelib = { git = "https://github.com/MyHush/silentdragonlite-cli", rev = "1d678e4280975a532cdff58f55b2b129c033c9f8" }
